# maperick

./: .gitignore  Cargo.toml  LICENSE  README.md  justfile
.github/workflows/: ci-tests.yml  release.yml
docs/: index.html
docs/css/: style.css
docs/js/: animations.js  globe.js
docs/presentation/: .gitignore  README.md  clone-voice.py  creator.html  editor.html  generate-assets.py  index.html  justfile  presentation-script.js  presentation-styles.css
docs/presentation/engine/: presentation-bg.js  presentation-script.js  presentation-styles.css
docs/presentation/studio/: asset-generator.js  creator.js  editor.js  llm-client.js  slide-templates.js
mac_app/Maperick/Maperick/: ContentView.swift  MaperickApp.swift
mac_app/Maperick/Maperick.xcodeproj/: project.pbxproj
mac_app/Maperick/Maperick/Models/: ConnectionState.swift  GeoIPLookup.swift  HistoryReader.swift  NetworkStats.swift  StatsStore.swift
mac_app/Maperick/Maperick/SceneKit/: GlobeScene.swift
mac_app/Maperick/Maperick/Services/: AppLauncher.swift  Constants.swift
mac_app/Maperick/Maperick/Views/: ConnectionSparkline.swift  GlobeView.swift  GlobeWindowView.swift  MenuBarPopoverView.swift  ProcessRowView.swift  ServerRowView.swift  StatsView.swift
src/: app.rs  crossterm.rs  geodb.rs  history.rs  lib.rs  main.rs  netstats.rs  termion.rs  ui.rs
