[package]
name = "maperick"
version = "0.1.0"
edition = "2021"

[features]
default = ["crossterm"]

[dependencies]
clap = { version = "4.0.18", features = ["derive"] }
netstat2 = "0.9.1"
bitflags = "1.3.2"
cassowary = "0.3.0"
unicode-segmentation = "1.10.0"
unicode-width = "0.1.10"
termion = { version = "2.0.1", optional = true }
crossterm = { version = "0.25.0", optional = true }
serde = { version = "1.0.147", features = ["derive"] }
tui = "0.19.0"
rand = "0.8.5"
sysinfo = "0.26.6"
termcolor = "1.1.3"
maxminddb = "0.23.0"
public-ip = "0.2.2"
confy = "0.5.1"




[dev-dependencies]
rand = "0.8.5"
