[package]
name = "maperick"
version = "0.1.0"
edition = "2021"

[features]
default = ["crossterm"]

[dependencies]
clap = { version = "4.5", features = ["derive"] }
netstat2 = "0.9"
bitflags = "2"
cassowary = "0.3"
unicode-segmentation = "1.12"
unicode-width = "0.1"
termion = { version = "4", optional = true }
crossterm = { version = "0.28", optional = true }
serde = { version = "1", features = ["derive"] }
ratatui = "0.29"
rand = "0.8"
sysinfo = "0.33"
termcolor = "1"
maxminddb = "0.24"
public-ip = "0.2"
confy = "0.6"

[dev-dependencies]
rand = "0.8"
