[package]
name = "maperick"
version = "0.2.0"
edition = "2021"
description = "Visualize active TCP connections on a TUI world map"
license = "MIT"
repository = "https://github.com/schlunsen/maperick"
keywords = ["tui", "network", "geoip", "terminal", "tcp"]
categories = ["command-line-utilities", "network-programming", "visualization"]
readme = "README.md"

[features]
default = ["crossterm"]

[dependencies]
clap = { version = "4.5", features = ["derive"] }
netstat2 = "0.9"
termion = { version = "4", optional = true }
crossterm = { version = "0.28", optional = true }
ratatui = "0.29"
sysinfo = "0.33"
maxminddb = "0.24"
anyhow = "1"
dirs = "6"
ureq = "3"
flate2 = "1"

[dev-dependencies]
rand = "0.8"
